<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.acme.a3csci3130.CreateBuinessAcitivity">

    <EditText
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/id"
        android:layout_marginTop="30dp"
        android:hint="Name"
        android:inputType="textShortMessage|textPersonName"
        app:layout_constraintLeft_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/Address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/PB"
        android:layout_marginTop="30dp"
        android:hint="Address"
        android:inputType="textShortMessage"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name" />

    <Button
        android:id="@+id/submitButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_below="@+id/province"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="35dp"
        android:onClick="submitInfoButton"
        android:text="Create a Business"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Address_U" />

    <EditText
        android:id="@+id/id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="30dp"
        android:ems="10"
        android:hint="ID"
        android:inputType="textPersonName|number" />

    <EditText
        android:id="@+id/PB"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/name"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:ems="10"
        android:hint="Primary Buiness"
        android:inputType="textShortMessage|textPersonName" />

    <EditText
        android:id="@+id/province"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/Address"
        android:layout_marginTop="50dp"
        android:ems="10"
        android:hint="Province"
        android:inputType="textCapCharacters|textShortMessage" />

</RelativeLayout>
