<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".initial_pageActivity">

    <TextView
        android:id="@+id/Welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="76dp"
        android:fontFamily="monospace"
        android:text="Seafood Marketplace"
        android:textColor="@android:color/background_dark"
        android:textSize="18sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/create"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/Welcome"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="99dp"
        android:text="Create a buiness" />

    <Button
        android:id="@+id/view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/create"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="98dp"
        android:text="View All Buiness" />
</RelativeLayout>